# protonsage

./: .gitignore  AGENTS.md  CMakeLists.txt  PRODUCT_PLAN.md  README.md  TODO-UI-FIXES.md  TODO.md  app.go  go.mod  go.sum  main.go  plan.md  wails.json
.github/workflows/: build.yml
_archive/go-backend/: go.mod
_archive/go-backend/internal/advisor/: models.go  preview.go  recommendation.go
_archive/go-backend/internal/app/: service_test.go
_archive/go-backend/internal/core/: system_normalization.go  system_normalization_test.go
_archive/go-backend/internal/protondb/: import_test.go  snapshots_test.go
_archive/go-backend/internal/steam/: library.go  localconfig.go  localconfig_test.go  paths.go  vdf_test.go
_archive/go-backend/internal/storage/: db_test.go  queries.go
_archive/go-backend/internal/system/: profile.go  profile_test.go
_archive/wails-frontend/frontend/: index.html  package-lock.json  package.json
_archive/wails-frontend/frontend/src/: App.tsx  styles.css
cmd/protonsage/: main.go
frontend/: vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/lib/: wails.ts
internal/advisor/: advisor_test.go  extraction.go  models.go  scoring.go
internal/app/: service.go
internal/core/: models.go
internal/protondb/: import.go  snapshots.go
internal/steam/: library.go  library_test.go  paths.go  vdf.go
internal/storage/: db.go  schema.sql
internal/system/: profile.go  profile_test.go
prompts/: 00-repo-bootstrap.md  01-data-import-storage.md  02-steam-system-profile.md  03-deterministic-recommendations.md  04-wails-ui-shell.md  05-optional-ai-advisor.md  06-final-integration-smoke.md  07-safe-steam-config-write-later.md  08-qt6-cpp-rewrite.md
src/: import_dedup_test.cpp  main.cpp  smoke_test.cpp
src/advisor/: advisor.h  engine.cpp  helpers.cpp  helpers.h  scoring.cpp
src/core/: models.cpp  models.h
src/protondb/: import.cpp  import.h  snapshots.cpp  snapshots.h
src/steam/: library.cpp  library.h  paths.cpp  paths.h  vdf.cpp  vdf.h
src/storage/: database.cpp  database.h
src/system/: profile.cpp  profile.h
src/ui/: imagecache.cpp  imagecache.h  mainwindow.cpp  mainwindow.h
subagent-results/: phase00-repo-bootstrap.md  phase01-implementation.md  phase01-review.md  phase02-implementation.md  phase02-review.md  phase03-implementation.md  phase03-parent-fix.md  phase03-review.md
testdata/protondb/: reports_piiremoved.json
testdata/steam/: libraryfolders.vdf  localconfig.vdf
testdata/steam/native-root/steamapps/: appmanifest_123.acf  libraryfolders.vdf
testdata/steam/secondary-library/steamapps/: appmanifest_456.acf
